--- a/css/style.css
+++ b/css/style.css
@@ -3,9 +3,12 @@
     padding: 0px auto;
         
 }
-
+ 
 .row-content {
-   padding-left: 10%
+    margin: 0px auto;
+    padding: 50px 0px 50px 0px;
+    border-bottom: 1px ridge;
+    min-height: 400px;
 }
 
 .footer {
@@ -22,7 +25,7 @@
     width: 0px auto;
 }
 
-.address {
+address {
     font-size: 80%;
     margin: 0px;
     color: #0f0f0f;
@@ -46,3 +49,11 @@
     padding-bottom: 10%;
 }
 
+body{
+    padding:50px 0px 0px 0px;
+    z-index:0;
+}
+
+.navbar-dark {
+     background-color: #512DA8;
+}
